@@ -593,7 +593,46 @@
 			</listitem>
 
 		</varlistentry>
+		 <varlistentry>
+			<term><prompt>$</prompt> <command>publican copy_web_brand</command></term>
+			 <listitem>
+				<para>
+					copy a brand's installed web content to another site. Options:
+				</para>
+				 <variablelist>
+					 <varlistentry>
+						<term>--brand</term>
+						 <listitem>
+							<para>
+								the brand to copy.
+							</para>
 
+						</listitem>
+
+					</varlistentry>
+					<varlistentry>
+						<term>--old_site_config=<replaceable>site_config</replaceable></term>
+						 <listitem>
+							<para>
+								website configuration file to copy brand web content from.
+							</para>
+
+						</listitem>
+					</varlistentry>
+					<varlistentry>
+						<term>--site_config=<replaceable>site_config</replaceable></term>
+						 <listitem>
+							<para>
+								website configuration file to copy brand web content to.
+							</para>
+
+						</listitem>
+					</varlistentry>
+				</variablelist>
+
+			</listitem>
+
+		</varlistentry>
 		 <varlistentry>
 			<term><prompt>$</prompt> <command>publican lang_stats</command></term>
 			 <listitem>
