@@ -15,7 +15,7 @@
 
 Name:           publican
 Version:        4.0.0_1
-Release:        0%{?dist}.t12
+Release:        0%{?dist}.t13
 Summary:        Common files and scripts for publishing with DocBook XML
 # For a breakdown of the licensing, refer to LICENSE
 License:        (GPLv2+ or Artistic) and CC0
