@@ -12,6 +12,7 @@ NEXT UNRELEASED
 - Include time in update_date. BZ #979846 
 - Support web site navigation for books without HTML. BZ #885916
 - Support ascending Revision History. BZ #999578
+- Add ability to compy installed bradn web content to another site. BZ #967664
 
 3.2.1 Wed Sep 04 2013
 - Fix empty images dir causing packaging fail. BZ #995896
